--- a/systems/hello_world/metrics/Dockerfile
+++ b/systems/hello_world/metrics/Dockerfile
@@ -3,6 +3,7 @@ FROM python:3
 LABEL description="Demo metrics build docker image"
 
 COPY thonk.gif /thonk.gif
+COPY plotly.json /plotly.json
 COPY metrics.py /metrics.py
 COPY requirements_lock.txt /requirements_lock.txt
 RUN pip install --no-cache-dir -r /requirements_lock.txt
