--- a/systems/hello_world/metrics/Dockerfile
+++ b/systems/hello_world/metrics/Dockerfile
@@ -5,7 +5,7 @@ LABEL description="Demo metrics build docker image"
 COPY thonk.gif /thonk.gif
 COPY plotly.json /plotly.json
 COPY metrics.py /metrics.py
-COPY requirements_lock.txt /requirements_lock.txt
-RUN pip install --no-cache-dir -r /requirements_lock.txt
+COPY requirements.txt /requirements.txt
+RUN pip install --no-cache-dir -r /requirements.txt
 
 CMD [ "python", "/metrics.py" ]
