--- a/systems/hello_world/metrics/requirements.txt
+++ b/systems/hello_world/metrics/requirements.txt
@@ -3,3 +3,4 @@ pandas==2.2.2
 protobuf>=3.0.0
 https://github.com/resim-ai/open-core/releases/download/v0.0.12/resim_metrics-0.0.12-py3-none-manylinux2014_x86_64.whl
 https://github.com/resim-ai/open-core/releases/download/v0.0.12/resim_metrics_schema-0.0.12-py3-none-any.whl
+git+https://github.com/resim-ai/resim-python-client@c71f1afe1342176ebc599a932eb0cc63c45fe8ad
