gif demo in metrics py

--- a/systems/hello_world/metrics/Dockerfile
+++ b/systems/hello_world/metrics/Dockerfile
@@ -4,6 +4,7 @@ LABEL description="Demo metrics build docker image"
 
 COPY metrics.py /metrics.py
 COPY requirements_lock.txt /requirements_lock.txt
+COPY data /data/
 RUN pip install --no-cache-dir -r /requirements_lock.txt
 
 CMD [ "python", "/metrics.py" ]
