Get some of the new drone metrics stuff

--- a/systems/drone/metrics/Dockerfile
+++ b/systems/drone/metrics/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.10
+FROM python:3.10-slim
 
 LABEL description="Demo metrics build docker image"
 
@@ -6,9 +6,7 @@ COPY requirements_lock.txt /requirements_lock.txt
 RUN pip install --no-cache-dir -r /requirements_lock.txt
 
 COPY metrics.py /
+COPY batch_metrics.py /
 COPY decoder_factory.py /
-COPY python_libs/ /
 
-
-ENV PYTHONPATH="/"
 CMD [ "python", "/metrics.py" ]
