--- a/systems/drone/metrics/requirements_lock.txt
+++ b/systems/drone/metrics/requirements_lock.txt
@@ -4,25 +4,83 @@
 #
 #    pip-compile --output-file=requirements_lock.txt requirements.txt
 #
+anyio==4.4.0
+    # via httpx
+attrs==24.2.0
+    # via -r requirements.txt
+certifi==2024.7.4
+    # via
+    #   httpcore
+    #   httpx
+    #   requests
+charset-normalizer==3.3.2
+    # via requests
+contourpy==1.2.1
+    # via matplotlib
+cycler==0.12.1
+    # via matplotlib
+exceptiongroup==1.2.2
+    # via anyio
+fonttools==4.53.1
+    # via matplotlib
+h11==0.14.0
+    # via httpcore
+httpcore==1.0.5
+    # via httpx
+httpx==0.27.0
+    # via -r requirements.txt
+idna==3.7
+    # via
+    #   anyio
+    #   httpx
+    #   requests
+kiwisolver==1.4.5
+    # via matplotlib
 lz4==4.3.3
     # via mcap
+matplotlib==3.9.2
+    # via -r requirements.txt
 mcap==1.1.1
     # via -r requirements.txt
 numpy==1.26.4
     # via
     #   -r requirements.txt
+    #   contourpy
+    #   matplotlib
     #   pandas
+packaging==24.1
+    # via matplotlib
 pandas==2.2.2
     # via -r requirements.txt
+pillow==10.4.0
+    # via matplotlib
 protobuf==5.26.1
-    # via -r requirements.txt
+    # via
+    #   -r requirements.txt
+    #   resim-open-core
+pyparsing==3.1.2
+    # via matplotlib
 python-dateutil==2.9.0.post0
-    # via pandas
+    # via
+    #   matplotlib
+    #   pandas
 pytz==2024.1
     # via pandas
+requests==2.32.3
+    # via -r requirements.txt
+resim-open-core @ https://github.com/resim-ai/open-core/releases/download/v0.0.17/resim_open_core-0.0.17-py3-none-manylinux2014_x86_64.whl
+    # via -r requirements.txt
 six==1.16.0
     # via python-dateutil
+sniffio==1.3.1
+    # via
+    #   anyio
+    #   httpx
+typing-extensions==4.12.2
+    # via anyio
 tzdata==2024.1
     # via pandas
-zstandard==0.22.0
+urllib3==2.2.2
+    # via requests
+zstandard==0.23.0
     # via mcap
