--- a/systems/drone/metrics/requirements_lock.txt
+++ b/systems/drone/metrics/requirements_lock.txt
@@ -49,11 +49,15 @@ numpy==1.26.4
     #   matplotlib
     #   pandas
 packaging==24.1
-    # via matplotlib
+    # via
+    #   matplotlib
+    #   plotly
 pandas==2.2.2
     # via -r requirements.txt
 pillow==10.4.0
     # via matplotlib
+plotly==5.23.0
+    # via -r requirements.txt
 protobuf==5.26.1
     # via
     #   -r requirements.txt
@@ -76,6 +80,8 @@ sniffio==1.3.1
     # via
     #   anyio
     #   httpx
+tenacity==9.0.0
+    # via plotly
 typing-extensions==4.12.2
     # via anyio
 tzdata==2024.1
