Add new drone metrics (#8)
## Description of change
Add some new drone metrics including states-over-time, gifs, plotly,
etc.

No events yet.

## Guide to reproduce test results.
Run a batch:

https://app.resim.ai/projects/026f76a5-c086-47f5-96ff-1d2960f42661/batches/2331ba1b-da40-48f8-b50b-f5c55a1279d4

Job Metrics
![Screenshot from 2024-08-21
15-25-19](https://github.com/user-attachments/assets/dae9dbca-c90a-4525-add5-467acc5fe4ab)

Batch Metrics
![Screenshot from 2024-08-21
15-26-13](https://github.com/user-attachments/assets/8778b9b4-aa28-482a-bfbc-49e4223538a0)

[Job
A/B](https://app.resim.ai/projects/026f76a5-c086-47f5-96ff-1d2960f42661/batches/5344ffa0-c348-4eb1-aa85-6562834b7143/jobs/7b85e533-d5af-4883-bc7e-38b0e80ecb83/compare-job/batch/2331ba1b-da40-48f8-b50b-f5c55a1279d4/job/f76864cf-1078-4343-a81d-61afdd1ce61f)

![Screenshot from 2024-08-21
15-37-23](https://github.com/user-attachments/assets/8bf01bdc-5cbb-4aa9-9fa2-8881b0d67724)


[Batch
A/B](https://app.resim.ai/projects/026f76a5-c086-47f5-96ff-1d2960f42661/batches/5344ffa0-c348-4eb1-aa85-6562834b7143/compare-batch/batch/2331ba1b-da40-48f8-b50b-f5c55a1279d4)

![Screenshot from 2024-08-21
15-36-01](https://github.com/user-attachments/assets/3e2af1c0-b996-4e3f-ab30-8e452f8ab289)


## Checklist:
- [x] I have self-reviewed this change.
- [x] I have tested this change.
- [ ] This change is covered by tests that are already landed, or in
this PR.

--- a/systems/drone/metrics/Dockerfile
+++ b/systems/drone/metrics/Dockerfile
@@ -6,6 +6,7 @@ COPY requirements_lock.txt /requirements_lock.txt
 RUN pip install --no-cache-dir -r /requirements_lock.txt
 
 COPY metrics.py /
+COPY batch_metrics.py /
 COPY decoder_factory.py /
 
 CMD [ "python", "/metrics.py" ]
