--- a/systems/drone/metrics/requirements_lock.txt
+++ b/systems/drone/metrics/requirements_lock.txt
@@ -28,7 +28,9 @@ h11==0.14.0
 httpcore==1.0.5
     # via httpx
 httpx==0.27.0
-    # via -r requirements.txt
+    # via
+    #   -r requirements.txt
+    #   resim-open-core
 idna==3.7
     # via
     #   anyio
@@ -48,20 +50,25 @@ numpy==1.26.4
     #   contourpy
     #   matplotlib
     #   pandas
+    #   resim-open-core
 packaging==24.1
     # via
     #   matplotlib
     #   plotly
 pandas==2.2.2
-    # via -r requirements.txt
-pillow==10.4.0
-    # via matplotlib
-plotly==5.23.0
-    # via -r requirements.txt
-protobuf==5.26.1
     # via
     #   -r requirements.txt
     #   resim-open-core
+pillow==10.4.0
+    # via matplotlib
+plotly==5.23.0
+    # via
+    #   -r requirements.txt
+    #   resim-open-core
+polling2==0.5.0
+    # via resim-open-core
+protobuf==5.26.1
+    # via -r requirements.txt
 pyparsing==3.1.2
     # via matplotlib
 python-dateutil==2.9.0.post0
@@ -71,8 +78,10 @@ python-dateutil==2.9.0.post0
 pytz==2024.1
     # via pandas
 requests==2.32.3
-    # via -r requirements.txt
-resim-open-core @ https://github.com/resim-ai/open-core/releases/download/v0.0.17/resim_open_core-0.0.17-py3-none-manylinux2014_x86_64.whl
+    # via
+    #   -r requirements.txt
+    #   resim-open-core
+resim-open-core==0.1.0
     # via -r requirements.txt
 six==1.16.0
     # via python-dateutil
