--- a/systems/drone/metrics/requirements.txt
+++ b/systems/drone/metrics/requirements.txt
@@ -1,8 +1,7 @@
 numpy==1.26.4
 pandas==2.2.2
-protobuf==5.26.1
 mcap==1.1.1
-resim_open_core
+/workspaces/open-core/bazel-bin/pkg/resim_open_core-0.0.0-py3-none-manylinux2014_aarch64.whl
 matplotlib==3.9.2
 attrs==24.2.0
 httpx==0.27.0
