--- a/systems/drone/Dockerfile
+++ b/systems/drone/Dockerfile
@@ -1,4 +1,4 @@
-FROM 909785973729.dkr.ecr.us-east-1.amazonaws.com/drone-simulator:swarm-seed
+FROM 909785973729.dkr.ecr.us-east-1.amazonaws.com/drone-simulator:0de4571c4816b18d3f2d917a3be84d7d3b7fb182
 
 ARG VELOCITY_COST_OVERRIDE
 ENV VELOCITY_COST_OVERRIDE=$VELOCITY_COST_OVERRIDE
