--- a/systems/perception/metrics/Dockerfile
+++ b/systems/perception/metrics/Dockerfile
@@ -4,6 +4,11 @@ WORKDIR /app
 
 COPY requirements.txt /tmp/requirements.txt
 
+RUN apt-get update && apt-get install -y \
+    libgl1-mesa-glx \
+    libglib2.0-0 \
+    && apt-get clean
+
 # Install any needed packages
 RUN pip install --no-cache-dir -r /tmp/requirements.txt
 
