--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -38,14 +38,11 @@ jobs:
         with:
           registry: ${{ env.REGISTRY_NAME }}
 
+      - name: Verify AWS identity
+        run: aws sts get-caller-identity
+
       - name: Verify ECR repository exists
-        run: |
-          aws ecr describe-repositories \
-            --repository-names ${{ env.BUILD_REPO_NAME }} \
-            --region us-east-1 || {
-              echo "❌ Repository '${{ env.BUILD_REPO_NAME }}' not found in ECR";
-              exit 1;
-            }
+        run: aws ecr describe-repositories --repository-names ${{ env.BUILD_REPO_NAME }} --region us-east-1
 
       - name: Docker metadata
         id: docker_meta
