Try create build

--- a/systems/ros2_talker_listener/docker-compose.base.yml
+++ b/systems/ros2_talker_listener/docker-compose.base.yml
@@ -1,6 +1,6 @@
 services:
   talker_listener:
-    image: ${RESIM_TALKER_LISTENER_REPO:-ros2-talker-listener}:${RESIM_VERSION:-latest}
+    image: ${RESIM_TALKER_LISTENER_IMAGE_TAG:-ros2-talker-listener}
     build:
       context: .
       dockerfile: talker_listener.dockerfile
