--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -11,6 +11,7 @@ env:
   RESIM_PASSWORD: ${{ secrets.RESIM_PASSWORD }}
   RESIM_USERNAME: ${{ secrets.RESIM_USERNAME }}
   PROJECT_NAME: Demo Experience Syncing
+  SIM_SYSTEM: demo_system
 
 permissions:
   id-token: write
@@ -71,8 +72,56 @@ jobs:
           push: true
           tags: ${{ steps.docker_meta.outputs.tags }}
 
+      - uses: imjasonh/setup-crane@v0.4
+
+      - name: Retag existing image
+        if: ${{ github.event_name == 'pull_request' && steps.filter.outputs.ros2_talker_listener == 'false'}}
+        id: retag_image
+        run: |
+          export IMAGE_URL=$(echo "${{ steps.docker_meta.outputs.tags }}" | tail -n 1)
+          export IMAGE_TAG="${IMAGE_URL##*:}"
+          crane tag ${{ env.REGISTRY_NAME }}/${{ env.BUILD_REPO_NAME }}:sandbox-ros2-mcb-${{ github.event.pull_request.base.ref }} $IMAGE_TAG
+
       - name: Get Image Tag
         id: get_image_tag
         run: |
           export IMAGE_URL=$(echo "${{ steps.docker_meta.outputs.tags }}" | tail -n 1)
           echo "image_tag=$IMAGE_URL" >> $GITHUB_OUTPUT
+
+  create-ros2-talker-listener-build:
+    name: Create a build for the ros2 talker + listener
+    runs-on: ubuntu-latest
+    needs: [build-push-ros2-talker-listener]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Fetch ReSim CLI
+        run: |
+          curl -L https://github.com/resim-ai/api-client/releases/latest/download/resim-linux-amd64 -o resim-cli
+          chmod +x resim-cli
+
+      - name: Determine Branch Name and Commit SHA
+        id: determine_branch_and_sha
+        run: |
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            echo "BRANCH_NAME=${{ env.HEAD_REF }}" >> $GITHUB_ENV
+            echo "COMMIT_SHA=${{ github.event.pull_request.head.sha }}" >> $GITHUB_ENV
+          else
+            echo "BRANCH_NAME=${{ env.REF_NAME }}" >> $GITHUB_ENV
+            echo "COMMIT_SHA=${{ github.sha }}" >> $GITHUB_ENV
+          fi
+        env:
+          HEAD_REF: ${{ github.head_ref }}
+          REF_NAME: ${{ github.ref_name }}
+
+      - name: Select Project
+        run: |
+          ./resim-cli projects select $PROJECT_NAME
+
+      - name: Register ROS2 Talker Listener Build in ReSim
+        run: |
+          export RESIM_TALKER_LISTENER_IMAGE_TAG=${{ needs.build-push-ros2-talker-listener.outputs.image_tag }}
+          ./resim-cli builds create --build-spec ./builds/docker-compose.yml --use-os-env \
+            --system $SIM_SYSTEM --name "ROS2 MCB Build" --description "A simple ROS2 talker/listener MCB example"
+            --version "${{ env.COMMIT_SHA }}" --branch "${{ env.BRANCH_NAME }}" --auto-create-branch
