--- a/systems/ros2_talker_listener/docker-compose.yml
+++ b/systems/ros2_talker_listener/docker-compose.yml
@@ -7,16 +7,21 @@ services:
     command: >
       bash -c "source /opt/ros/humble/setup.bash &&
                ros2 run demo_nodes_py talker"
+    depends_on:
+      - listener
+      - rosbag
+
   listener:
     extends:
       file: docker-compose.base.yml
       service: talker_listener
     container_name: ros2_listener
     depends_on:
-      - talker
+      - rosbag
     command: >
       bash -c "source /opt/ros/humble/setup.bash &&
-               ros2 run demo_nodes_py talker"
+               ros2 run demo_nodes_py listener"
+
   rosbag:
     extends:
       file: docker-compose.base.yml
@@ -25,9 +30,12 @@ services:
     command: >
       bash -c "source /opt/ros/humble/setup.bash &&
                ros2 bag record /chatter -o /tmp/resim/outputs/mcb_log/ --storage mcap"
-  waiter:
+  orchestrator:
     image: public.ecr.aws/docker/library/busybox:latest
     container_name: wait_60_seconds
     command: sleep 60
     labels:
       resim.ai/isTestOrchestrator: true
+    depends_on:
+      - listener
+      - talker
