--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -19,7 +19,7 @@ permissions:
   pull-requests: write
 
 jobs:
-  build-push-ros2-talker-listener:
+  build-push-hello-world:
     name: Create & Push New ROS2 Talker/Listener Build Image
     runs-on: ubuntu-latest
     outputs:
@@ -55,27 +55,27 @@ jobs:
         with:
           base: ${{ github.ref }}
           filters: |
-            ros2_talker_listener:
-              - systems/ros2_talker_listener/**
+            hello_world:
+              - systems/hello_world/**
 
       - name: Set up Docker Buildx
-        if: ${{ github.event_name != 'pull_request' || steps.filter.outputs.ros2_talker_listener == 'true'}}
+        if: ${{ github.event_name != 'pull_request' || steps.filter.outputs.hello_world == 'true'}}
         uses: docker/setup-buildx-action@v3
 
       - name: Docker Build Push
-        if: ${{ github.event_name != 'pull_request' || steps.filter.outputs.ros2_talker_listener == 'true'}}
+        if: ${{ github.event_name != 'pull_request' || steps.filter.outputs.hello_world == 'true'}}
         id: build-push-build
         uses: docker/build-push-action@v5
         with:
-          context: ./systems/ros2_talker_listener
-          file: ./systems/ros2_talker_listener/talker_listener.dockerfile
+          context: ./systems/hello_world
+          file: ./systems/hello_world/Dockerfile
           push: true
           tags: ${{ steps.docker_meta.outputs.tags }}
 
       - uses: imjasonh/setup-crane@v0.4
 
       - name: Retag existing image
-        if: ${{ github.event_name == 'pull_request' && steps.filter.outputs.ros2_talker_listener == 'false'}}
+        if: ${{ github.event_name == 'pull_request' && steps.filter.outputs.hello_world == 'false'}}
         id: retag_image
         run: |
           export IMAGE_URL=$(echo "${{ steps.docker_meta.outputs.tags }}" | tail -n 1)
@@ -88,10 +88,10 @@ jobs:
           export IMAGE_URL=$(echo "${{ steps.docker_meta.outputs.tags }}" | tail -n 1)
           echo "image_tag=$IMAGE_URL" >> $GITHUB_OUTPUT
 
-  create-ros2-talker-listener-build:
+  create-hello-world-build:
     name: Create a build for the ros2 talker + listener
     runs-on: ubuntu-latest
-    needs: [build-push-ros2-talker-listener]
+    needs: [build-push-hello-world]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -121,7 +121,7 @@ jobs:
 
       - name: Register ROS2 Talker Listener Build in ReSim
         run: |
-          export RESIM_TALKER_LISTENER_IMAGE_TAG=${{ needs.build-push-ros2-talker-listener.outputs.image_tag }}
-          ./resim-cli builds create --build-spec ./systems/ros2_talker_listener/docker-compose.yml --use-os-env \
+          export RESIM_HELLO_WORLD_IMAGE_TAG=${{ needs.build-push-hello-world.outputs.image_tag }}
+          ./resim-cli builds create --image $RESIM_HELLO_WORLD_IMAGE_TAG --use-os-env \
             --system $SIM_SYSTEM --name "ROS2 MCB Build" --description "A simple ROS2 talker/listener MCB example" \
             --version "${{ env.COMMIT_SHA }}" --branch "${{ env.BRANCH_NAME }}" --auto-create-branch
