--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -20,7 +20,7 @@ permissions:
 
 jobs:
   build-push-hello-world:
-    name: Create & Push New ROS2 Talker/Listener Build Image
+    name: Create & Push New Hello World Build Image
     runs-on: ubuntu-latest
     outputs:
       image_tag: ${{ steps.get_image_tag.outputs.image_tag }}
@@ -46,9 +46,9 @@ jobs:
           images: |
             ${{ env.REGISTRY_NAME }}/${{ env.BUILD_REPO_NAME }}
           tags: |
-            type=ref,event=branch,prefix=sandbox-ros2-mcb-
-            type=ref,event=pr,prefix=sandbox-ros2-mcb-pr-
-            type=sha,prefix=sandbox-ros2-mcb-
+            type=ref,event=branch,prefix=sandbox-hello-world-
+            type=ref,event=pr,prefix=sandbox-hello-world-pr-
+            type=sha,prefix=sandbox-hello-world-
 
       - uses: dorny/paths-filter@v3
         id: filter
@@ -80,7 +80,7 @@ jobs:
         run: |
           export IMAGE_URL=$(echo "${{ steps.docker_meta.outputs.tags }}" | tail -n 1)
           export IMAGE_TAG="${IMAGE_URL##*:}"
-          crane tag ${{ env.REGISTRY_NAME }}/${{ env.BUILD_REPO_NAME }}:sandbox-ros2-mcb-${{ github.event.pull_request.base.ref }} $IMAGE_TAG
+          crane tag ${{ env.REGISTRY_NAME }}/${{ env.BUILD_REPO_NAME }}:sandbox-hello-world-${{ github.event.pull_request.base.ref }} $IMAGE_TAG
 
       - name: Get Image Tag
         id: get_image_tag
@@ -89,7 +89,7 @@ jobs:
           echo "image_tag=$IMAGE_URL" >> $GITHUB_OUTPUT
 
   create-hello-world-build:
-    name: Create a build for the ros2 talker + listener
+    name: Create a build for the hello-world image
     runs-on: ubuntu-latest
     needs: [build-push-hello-world]
     steps:
@@ -122,6 +122,6 @@ jobs:
       - name: Register ROS2 Talker Listener Build in ReSim
         run: |
           export RESIM_HELLO_WORLD_IMAGE_TAG=${{ needs.build-push-hello-world.outputs.image_tag }}
-          ./resim-cli builds create --image $RESIM_HELLO_WORLD_IMAGE_TAG --use-os-env \
-            --system $SIM_SYSTEM --name "ROS2 MCB Build" --description "A simple ROS2 talker/listener MCB example" \
+          ./resim-cli builds create --image $RESIM_HELLO_WORLD_IMAGE_TAG \
+            --system $SIM_SYSTEM --name "ROS2 MCB Build" --description "A simple hello-world example" \
             --version "${{ env.COMMIT_SHA }}" --branch "${{ env.BRANCH_NAME }}" --auto-create-branch
