--- a/systems/hello_world/.resim/metrics/config.yml
+++ b/systems/hello_world/.resim/metrics/config.yml
@@ -6,3 +6,11 @@ topics:
       iter: int
       arg: float
       sum: float
+
+metrics:
+  Value over iteration:
+    type: test
+    description: Value over iteration plot
+    query_string: SELECT 'value' as group_name, iter, "sum" from partial_sums
+    template_type: system
+    template: line
