--- a/systems/hello_world/.resim/metrics/config.yml
+++ b/systems/hello_world/.resim/metrics/config.yml
@@ -14,3 +14,9 @@ metrics:
     query_string: SELECT 'value' as group_name, iter, "sum" from partial_sums
     template_type: system
     template: line
+
+
+metrics sets:
+  hello metrics:
+    metrics:
+      - Value over iteration
