--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -10,8 +10,8 @@ env:
   REGISTRY_NAME: public.ecr.aws/resim
   RESIM_PASSWORD: ${{ secrets.RESIM_PASSWORD }}
   RESIM_USERNAME: ${{ secrets.RESIM_USERNAME }}
-  PROJECT_NAME: Demo Experience Syncing
-  SIM_SYSTEM: demo_system
+  PROJECT_NAME: mgrijalva metrics 2 testing
+  SIM_SYSTEM: SYSTEM
   AUTH_URL: https://resim-dev.us.auth0.com
   API_URL: https://api.resim.io/v1/
 
